<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pygmy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to Pygmy, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_pygmy">Welcome to Pygmy!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Night">Night</string>
    <string name="Day">Day</string>

    <!-- Preferences -->
    <string name="pref_sound">Sound</string>
    <string name="pref_vib">Vibrate</string>
    <string name="pref_notif">Notifications</string>
    <string name="pref_des">Design</string>
    <string name="pref_gen">General</string>
    <string name="pref_games">Games</string>

    <!-- Game Homepage -->
    <string name="play">Play</string>
    <string name="invite">Invite</string>
    <string name="download">Download</string>
    <string name="v_report">Valid report</string>
    <string name="name_report">Report the game</string>
    <string name="cond1">Incoherent content</string>
    <string name="cond2">Game not working</string>
    <string name="cond3">Offensive content</string>

    <!-- Navbar values -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- Profile view values -->
    <string name="name_profile"></string>
    <string name="language_profile"></string>
    <string name="games_played_profile">Most played games</string>
    <string name="last_played_profile">Last played game</string>
    <string name="offline">Offline</string>
    <string name="board">Board</string>
    <string name="loading_error">Internal error : Could not load game</string>
    <string name="score">Pygmy game : 4000 pts</string>

    <!-- Game list valus -->
    <string name="games">Games</string>
    <string name="description">Description</string>
    <string name="empty"></string>

</resources>