<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/logo_home_page" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/welcome_to_pygmy"
            android:textAppearance="@style/GuessWordText" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/gplus_signin_logo"
            android:src="@drawable/gplus_signin_logo">
        </Button>

        <Button
            android:id="@+id/offline_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/offline" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/match_instructions"
            android:textAppearance="@style/HelpText"
            android:width="300dp" />

        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp" />

        <EditText
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:inputType="textEmailAddress|textEmailSubject"
            android:maxLines="1"
            android:text="@string/hello_world"
            android:textAppearance="@style/GuessWordText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/doneButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:onClick="onDoneClicked"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/done"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />

            
           
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <!-- "PROFILE SCREEN -->

    <LinearLayout
        android:id="@+id/screen_profile"
        style="@style/screen_profile" >

        <LinearLayout style="@style/box_profile" >

            <ImageView
                android:id="@+id/image_profile"
                style="@style/image_profile" />

            <TextView
                android:id="@+id/name_profile"
                style="@style/text_profile" />

            <TextView
                android:id="@+id/nat_profile"
                style="@style/text_profile" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/orange" />

        <LinearLayout style="@style/box_profile" >

            <TextView
                android:id="@+id/played_games_profile"
                style="@style/game_profile"
                android:text="@string/games_played_profile" />

            <!-- "MOST PLAYED 1 -->

            <LinearLayout style="@style/game_list_profile" >

                <ImageView
                    android:id="@+id/game_icon_profile"
                    android:src="@drawable/logo_home_page"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="2dip"
                    android:contentDescription="@string/description" />

                <TextView
                    android:id="@+id/score_one"
                    style="@style/text_game_list_profile"
                    android:text="@string/score" />
            </LinearLayout>

            <!-- "MOST PLAYED 2 -->
            
            <LinearLayout style="@style/game_list_profile" >

                <ImageView
                    android:id="@+id/game_icon_profile_two"
                    android:src="@drawable/logo_home_page"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="2dip"
                    android:contentDescription="@string/description" />

                <TextView
                    android:id="@+id/score_two"
                    style="@style/text_game_list_profile"
                    android:text="@string/score" />
            </LinearLayout>
            
            <!--  LAST PLAYED  -->
            <TextView
                android:id="@+id/last_games_profile"
                style="@style/game_profile"
                android:text="@string/last_played_profile" />
            
            <LinearLayout style="@style/game_list_profile" >

                <ImageView
                    android:id="@+id/game_icon_profile_last"
                    android:src="@drawable/logo_home_page"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="2dip"
                    android:contentDescription="@string/description" />

                <TextView
                    android:id="@+id/last_played"
                    style="@style/text_game_list_profile"
                    android:text="@string/score" />
            </LinearLayout>

           
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>